specialists fix gap between cards

--- a/src/scss/pages/specialists/components/_specialists.scss
+++ b/src/scss/pages/specialists/components/_specialists.scss
@@ -2,7 +2,7 @@
     &_list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 30px;
+        gap: 50px;
         @media (max-width: 1280px) {
             grid-template-columns: 1fr;
         }
